# thansohoc

./: .gitignore  Accessibility-Audit-Summary-v1.0.md  E2E-Verification-Summary-v1.1.md  Execution-Tracker-v1.0.md  Execution-Tracker-v1.9.md  Execution-Tracker-v2.2.md  Human-Review-Rubric-v1.0.md  Human-Review-Summary-v1.1.md  Implementation-Plan-v1.1.md  Launch-Readiness-Checklist-v1.0.md  Local-Run-Commands-v1.0.md  MVP-Feature-Cut-v1.2.md  Manual-Live-Verification-Checklist-v1.0.md  Manual-Test-Results-Template-v1.0.md  PRD-Numerology-Intelligence-System-v1.1.md  Prompt-Output-Contract-v1.2.md  State-Data-Model-v1.1.md
numerology-app/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
numerology-app/docs/: Insight-Examples-v1.0.md  numerology-methodology-v1.md  vietnamese-voice-guide.md
numerology-app/src/: App.tsx  index.css  main.tsx
numerology-app/src-tauri/: Cargo.toml  tauri.conf.json
numerology-app/src-tauri/icons/: README.md  icon.icns
numerology-app/src-tauri/src/: main.rs
numerology-app/src/localization/: index.ts  messages.ts
numerology-app/src/screens/: BirthChart.tsx  Compass.tsx  Continuity.tsx  Dashboard.tsx  DeepCycles.tsx  Guidance.tsx  History.tsx  NameLayers.tsx  Onboarding.tsx  Profile.tsx  Reading.tsx  Settings.tsx
numerology-app/src/services/: analytics.ts  config.ts  dailyPractice.ts  database.ts  desktopNotifications.ts  desktopStorageMigration.ts
numerology-app/src/stores/: index.ts  insightStore.ts  journalStore.ts  settingsStore.ts  userStore.ts
(+56 files in other folders)
